# keyphrase_extraction

./: .gitignore  pyproject.toml
module/: pyproject.toml
module/src/keyphrase_extractors/: __init__.py  base_extractor.py
module/src/keyphrase_extractors/wrap_keybert/: __init__.py  data.py  extractor.py  model.py
module/src/keyphrase_extractors/wrap_pke/: __init__.py  extractor.py
notebook/: experimentation.ipynb
