[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
keyphrase_extractors = { path = "module", develop = true }


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
ruff = "^0.5.7"
isort = "^5.13.2"
jupyterlab = "^4.2.4"
jupyterlab-lsp = "^5.1.0"
python-lsp-server = "^1.11.0"
python-lsp-ruff = "^2.2.2"
jupyterlab-code-formatter = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80

[tool.ruff]
line-length = 80
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "W191", # indentation contains tabs
    "B904", # raise ... from ... になっていない場合のエラーを無視
]

unfixable = [
    "F401", # module imported but unused
    "F841", # local variable is assigned to but never used,
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]
