[tool.poetry]
name = "keyphrase_extractors"
version = "0.1.0"
description = ""
authors = ["flatton <tomoki.fujihara@abejainc.com>"]
readme = "README.md"
packages = [{ include = "keyphrase_extractors", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pydantic = "^2.8.2"
pandas = "^2.2.2"
ja-ginza = "^5.2.0"
pke = { git = "https://github.com/boudinfl/pke.git" }
keybert = "^0.8.5"
sentencepiece = "^0.2.0"
fugashi = "^1.4.0"
numpy = "1.26.4"
protobuf = "^5.29.0"
unidic-lite = "^1.0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
